--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.24.0",
+    "file-system": "^1.2.2",
+    "gray-matter": "^4.0.3",
     "next": "^11.0.0",
+    "path": "^0.12.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.2"
   }
 }
